maze.lessons.maze.island.IslandMaze.scala.error
Escaper:21: error: value North is not a member of object plm.universe.Direction
		if (!estFaceMur && (getDirection() == Direction.North))
                                                                ^