maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	def keepHandOnRightWall()
		{
		while(!estSurBiscuit())
		{
		droite();
		if (estFaceMur)
		{
		gauche();
		if (estFaceMur)
		{gauche()
		}
				}
		if (!estFaceMur)
		{
			avance();
		}
		}
		}
		if (!estFaceMur && (getDirection() == Direction.North))
		{
			avance()
		}
		else 
		keepHandOnRightWall();
	
}
